@@ -1,0 +1,41 @@
+\ ==============================================================================
+\
+\        xos_test - the test words for the xos module in the ffl
+\
+\               Copyright (C) 2007  Dick van Oudheusden
+\  
+\ This library is free software; you can redistribute it and/or
+\ modify it under the terms of the GNU General Public
+\ License as published by the Free Software Foundation; either
+\ version 2 of the License, or (at your option) any later version.
+\
+\ This library is distributed in the hope that it will be useful,
+\ but WITHOUT ANY WARRANTY; without even the implied warranty of
+\ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+\ General Public License for more details.
+\
+\ You should have received a copy of the GNU General Public
+\ License along with this library; if not, write to the Free
+\ Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+\
+\ ==============================================================================
+\ 
+\  $Date: 2007-12-12 19:36:38 $ $Revision: 1.1 $
+\
+\ ==============================================================================
+
+include ffl/xis.fs
+include ffl/est.fs
+include ffl/tst.fs
+
+
+.( Testing: xis) cr
+
+t{ xis-create xis1 }t
+
+t{ s" <!--Comment--><![CDATA[Hallo]]>" xis1 xis-set-string }t 
+
+t{ xis1 xis-read xis.comment ?s type }t
+t{ xis1 xis-read xis.cdata   ?s type }t
+
+\ ==============================================================================
